--- a/app_error.html
+++ b/app_error.html
@@ -24,7 +24,7 @@
     <div class="wrapper">
         <div class="content">
             <h1>We are sorry</h1>
-            <p>An application error occured, please try to go back.<br/>If problem persist <a href="mailto:ddidev@millwardbrown.com">please contact support</a> for help.</p>
+            <p>An application error occured, please try to go back.<br/>If problem persists <a href="mailto:ddidev@millwardbrown.com">please contact support</a> for help.</p>
         </div>
     </div>
 </body>
