--- a/maintenance.html
+++ b/maintenance.html
@@ -24,7 +24,7 @@
     <div class="wrapper">
         <div class="content">
             <h1>Temporarily Down for Maintenance</h1>
-            <p>We are performing scheduled maintenance. We should be back online shortly</p>
+            <p>We are performing a scheduled maintenance. We should be back online shortly</p>
         </div>
     </div>
 </body>
