prolongate kip maintenance

--- a/maintenance_kip.html
+++ b/maintenance_kip.html
@@ -58,7 +58,7 @@ a {
     <div class="wrapper">
         <div class="content">
             <h1>Site under scheduled maintenance</h1>
-            <p>Site will by back online by 9:30 CET (8:30 GMT).</p>
+            <p>Site will by back online by 10:30 CEST (8:30 GMT).</p>
         </div>
     </div>
 
